# SMTP_client

./: .gitignore  CMakeLists.txt  README.md  credentials.config.example  sample_body.txt  smtp_client
lib/base64/: CMakeLists.txt
lib/base64/inc/: base64.h
lib/base64/src/: base64.c
src/: main.c
